5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1618_2933.log
== TEST (2019-04-02 10:14:14) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = float(input("Valor final: "))

r = (log(z) - log(x)) / y

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '1000.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:14:23) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = float(input("Valor final: "))

r = (log(z) - log(x)) / y

print(x)
-- EXECUTION TIME:
0.18238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2933/main.py", line 4, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '1000.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:14:42) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = float(input("Valor final: "))

r = (log(z) - log(x)) / y

print(round(x, 5)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:14:46) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = float(input("Valor final: "))

r = (log(z) - log(x)) / y

print(round(x, 5)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:14:51) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = float(input("Valor final: "))

r = (log(z) - log(x)) / y

print(round(r, 5)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:05) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = float(input("Valor final: "))

r = (log(z) - log(x)) / y

print(round(r, 3)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:12) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = float(input("Valor final: "))

r = (log(z) - log(x)) / y

print(round(r, 2)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:15:13) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = float(input("Valor final: "))

r = (log(z) - log(x)) / y

print(round(r, 2)
-- EXECUTION TIME:
0.129463
-- ERROR:
  File "/home/codebench/codes/1618/2933/main.py", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:44) 
-- CODE:
from math import *

x = int(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = int(input("Valor final: "))

r = (log(z) - log(x)) / y

print(round(r, 2)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:47) 
-- CODE:
from math import *

x = int(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = int(input("Valor final: "))

r = (log(z) - log(x)) / y

print(round(r, 2)
-- ERROR:
File "XXXX", line 10
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:55) 
-- CODE:
from math import *

x = int(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = int(input("Valor final: "))

r = (log(z) - log(x)) / y

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '100.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:16:27) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = float(input("Valor final: "))

r = (log(z) - log(x)) / y

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '1000.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:16:44) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = int(input("Anos de investimento: "))
z = float(input("Valor final: "))

r = (log(z) - log(x)) / y

print(r)
-- EXECUTION TIME:
0.172616
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2933/main.py", line 4, in <module>
    y = int(input())
ValueError: invalid literal for int() with base 10: '1000.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:18:26) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = float(input("Valor final de Qf: "))
z = int(input("Anos de investimento: "))

r = (log(y) - log(x)) / z

print(r)
-- OUTPUT:
1.1512925464970225
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:18:42) 
-- CODE:
from math import *

x = float(input("Valor de Q0: "))
y = float(input("Valor final de Qf: "))
z = int(input("Anos de investimento: "))

r = (log(y) - log(x)) / z

print(r)
-- EXECUTION TIME:
0.14557
-- TEST CASE 1:
---- input:
100.0
1000.0
2
---- correct output:
1.1512925464970225
---- user output:
1.1512925464970225
-- TEST CASE 2:
---- input:
122.0
3000.5
3
---- correct output:
1.0675043918987706
---- user output:
1.0675043918987706
-- TEST CASE 3:
---- input:
123.4
15000.5
12
---- correct output:
0.4000339751159041
---- user output:
0.4000339751159041
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
